--- a/app/src/main/res/layout/fragment_taipei_spot_detail.xml
+++ b/app/src/main/res/layout/fragment_taipei_spot_detail.xml
@@ -30,6 +30,11 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:textColor="@color/btn_blue"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/grid_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.core.widget.NestedScrollView>
 
